--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" class="no-js"><head>
+<html lang="en" class="no-js">
+<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
@@ -8,7 +9,7 @@
 	<meta name="author" content="Chris McKeague">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css?v=2">
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.0.0.min.css">
 </head>
 <body>
 	<div id="container">
@@ -23,5 +24,6 @@
           </ul>
 		</div>
 
-	</div></body>
+	</div>
+</body>
 </html>
