Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.0.0.min.css">
 </head>
 <body>
-	<div id="container">
+	<div class="container">
           <h1>
           Chris McKeague
           </h1>
